force-app/main/default/objects/Trade__c/fields/Buy_Amount_Form__c.field-meta.xml
<CustomField>
    <fullName>Buy_Amount_Form__c</fullName>
    <formula>Sell_Amount__c * Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Buy Amount</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>