force-app/main/default/objects/Trade__c/fields/Buy_Currency__c.field-meta.xml
<CustomField>
    <fullName>Buy_Currency__c</fullName>
    <label>Buy CCY</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>EUR</fullName>
            </value>
            <value>
                <fullName>GBP</fullName>
            </value>
            <value>
                <fullName>USD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>