force-app/main/default/objects/Trade__c/fields/Date_Booked__c.field-meta.xml
<CustomField>
    <fullName>Date_Booked__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Booked</label>
    <type>DateTime</type>
</CustomField>